# cineca-gpu-school-cub

./: .gitignore  README.md
examples/: CMakeLists.txt
examples/block/: CMakeLists.txt  adjdiff.cu  histogram.cu  run_length.cu  shuffle.cu
examples/device/: CMakeLists.txt  device_for.cu  for_each.cu  partition.cu  seg_reduce.cu  select.cu
examples/warp/: CMakeLists.txt  memory.cu  reduce.cu  scan.cu  sort.cu
slides/: package-lock.json  package.json  slides.md
slides/setup/: shiki.ts
